# enPAC-2020

./: .gitignore  .travis.yml  CMakeLists.txt  Data_Structures.cpp  Data_Structures.h  LTLCardinality.txt  LTLCardinality.xml  Lexer.h  Makefile  README.md  Syntax_Tree.cpp  TGBA.cpp  TGBA.h  back.txt  boolresult.txt  cmake_install.cmake  enPAC  getproduct.txt  id.txt  main.bak  main.cpp  pnml_parse.cpp  pnml_parse.h  product.cpp  product.h
example/: .gitignore  LTLFireability.txt  LTLFireability.xml
old/: boolresult.txt
website/: index.html
